Fix nav item overflow

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -231,6 +231,7 @@ th {
   cursor: pointer;
   text-transform: capitalize;
   text-decoration: none;
+  overflow: hidden;
 }
 
 .nav-item.active,
